<resources>
    <string name="app_name">RateMaPlateSwipePlatePage</string>
    <string name="title">Rate Ma Plate</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rate_ma_plate">Rate Ma Plate</string>
    <string name="itsamatch">It\'s a Match</string>
    <string name="matchText">It\'s a match!</string>
    <string name="youhavematched">You liked this plate</string>
    <string name="keepbrowsing">Keep Browsing</string>
    <string name="viewlikes">View Liked Plates</string>
</resources>
