<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.itsamatchpage"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/likedplatesbutton"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/buttonpink"
        android:onClick="toMatchesPage"
        android:text="@string/viewlikes"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youhavematchedText"
        app:layout_constraintVertical_bias="0.686" />

    <ImageView
        android:id="@+id/heart1"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/matchText"
        app:layout_constraintTop_toBottomOf="@+id/cool_toolbar"
        app:srcCompat="@drawable/heart" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/cool_toolbar"
        android:layout_width="416dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_bottom_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="62dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/back"
        android:contentDescription="backButtonDashboard"
        android:onClick="backToDashboard"
        app:layout_constraintBottom_toBottomOf="@+id/cool_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cool_toolbar"
        app:layout_constraintVertical_bias="0.444" />

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="37dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/notificationbutton"
        android:contentDescription="heartButtonToolbar"
        android:onClick="toMatchesPage"
        app:layout_constraintBottom_toBottomOf="@+id/cool_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cool_toolbar"
        app:layout_constraintVertical_bias="0.450
" />

    <TextView
        android:id="@+id/itsamatchTitle"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/itsamatch"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cool_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/cool_toolbar"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="376dp"
        android:layout_height="241dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cool_toolbar"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/matchText"
        android:layout_width="208dp"
        android:layout_height="72dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:text="@string/matchText"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card"
        app:layout_constraintVertical_bias="0.674" />

    <ImageView
        android:id="@+id/heart2"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/matchText"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/youhavematchedText"
        android:layout_width="376dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/youhavematched"
        android:elevation="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/keepbrowsingbutton"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cornerbutton"
        android:onClick="backToDashboard"
        android:text="@string/keepbrowsing"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likedplatesbutton"
        app:layout_constraintVertical_bias="0.064" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/itsamatchImage"
        android:layout_width="201dp"
        android:layout_height="204dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:src="@drawable/dish1"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:onClick="toMatchesPage"
        app:layout_constraintBottom_toTopOf="@+id/matchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cool_toolbar"
        app:layout_constraintVertical_bias="0.571" />


</android.support.constraint.ConstraintLayout>